# snowcite

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  mkdocs.yml  pyproject.toml  server.py
.claude/: settings.json
.github/workflows/: deploy.yml  docs.yml  lint.yml  test.yml
docs/en/: artifacts.md  backends.md  getting-started.md  index.md  installation.md  troubleshooting.md  workflow.md
docs/ru/: artifacts.md  backends.md  getting-started.md  index.md  installation.md  troubleshooting.md  workflow.md
snowball/: app.py  bibtex.py  db.py  dedup.py  settings.py  types.py
snowball/sources/: arxiv_client.py  base.py  openalex.py  semantic_scholar.py
snowball/tools/: common.py  latex.py  review.py  search.py
snowcite/: __init__.py  app.py  artifacts.py  bibliography.py  db.py  dedup.py  logging.py  persistence.py  projects.py  rendering.py  server.py  settings.py  types.py
snowcite/sources/: _http.py  arxiv_client.py  base.py  crossref.py  openalex.py  pubmed.py  semantic_scholar.py
snowcite/templates/: __init__.py  claude_md.j2
snowcite/templates/agents/: academic_reviewer.md.j2  humanizer.md.j2
snowcite/templates/latex/: gost.tex.j2  plain.tex.j2
snowcite/templates/typst/: gost.typ.j2  plain.typ.j2
snowcite/tools/: artifacts.py  common.py  compile.py  critique.py  doctor.py  export.py  import_refs.py  init.py  notes.py  research.py  review.py  review_quality.py  search.py  sections.py  session.py  synthesis.py  writing.py
tests/: conftest.py  test_artifacts.py  test_bibliography.py  test_compile.py  test_confidence.py  test_critique.py  test_dedup.py  test_import_refs.py  test_init.py  test_notes.py  test_persist.py  test_polish.py  test_projects.py  test_research.py  test_review.py  test_review_quality.py  test_sections.py  test_session.py  test_source_routing.py  test_synthesis.py  test_templates.py  test_truncation.py  test_writing.py
